--- a/package.json
+++ b/package.json
@@ -7,16 +7,27 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "assert": "^2.0.0",
     "axios": "^0.24.0",
+    "buffer": "^6.0.3",
+    "dns": "^0.2.2",
     "firebase": "^9.6.1",
     "html-loader": "1.0.0-alpha.0",
+    "jquery": "^3.6.0",
+    "node-themoviedb": "^0.2.8",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
     "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "stream": "0.0.2",
+    "themoviedb-api-client": "^1.1.0",
+    "util": "^0.12.4",
+    "zlib": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
